# EdgeIntelligence

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: bindings.yml  release.yml
apps/el-bench/: Cargo.toml
apps/el-bench/src/: main.rs
apps/el-chat/: Cargo.toml  README.md
apps/el-chat/src/: main.rs
benchmarks/: .gitignore  README.md  prepare.py
crates/adapters/el-cloud/: Cargo.toml  README.md
crates/adapters/el-cloud/src/: lib.rs  openai_wire.rs  routing.rs
crates/adapters/el-engine-candle/: Cargo.toml  README.md
crates/adapters/el-engine-candle/src/: lib.rs
crates/adapters/el-ffi/: Cargo.toml  README.md
crates/adapters/el-ffi/src/: lib.rs
crates/adapters/el-grammar-llguidance/: Cargo.toml  README.md
crates/adapters/el-grammar-llguidance/src/: lib.rs
crates/adapters/el-provenance-ed25519/: Cargo.toml  README.md
crates/adapters/el-provenance-ed25519/src/: lib.rs
crates/el-core/: Cargo.toml  README.md
crates/el-core/src/: config.rs  error.rs  events.rs  ids.rs  lib.rs  provider.rs  value_objects.rs
crates/el-grammar/: Cargo.toml  README.md
crates/el-grammar/src/: lib.rs
crates/el-memory/: Cargo.toml  README.md
crates/el-memory/src/: arena.rs  kv.rs  lib.rs  planner.rs
crates/el-provenance/: Cargo.toml  README.md
crates/el-provenance/src/: lib.rs
crates/el-runtime/: Cargo.toml  README.md
crates/el-runtime/src/: defaults.rs  lib.rs  ports.rs  session.rs
crates/el-safety/: Cargo.toml  README.md
crates/el-safety/src/: lib.rs
crates/el-telemetry/: Cargo.toml  README.md
crates/el-telemetry/src/: lib.rs
docs/: followups.md  prd.md
docs/adr/: ADR-001-adopt-webassembly-as-cross-platform-sdk-runtime.md  ADR-002-candle-as-rust-native-inference-engine.md  ADR-003-static-memory-planning-with-zero-allocation-arena.md  ADR-004-air-gapped-by-default-with-opt-in-hybrid-mode.md  ADR-005-on-device-only-tiered-decoder-time-safety.md  ADR-006-mandatory-ed25519-model-signature-verification-load-gate.md  ADR-007-content-free-domain-events-privacy-by-construction-telemetry.md  ADR-008-implement-the-sdk-in-rust-instead-of-c-cpp.md  ADR-009-flutter-rust-bridge-for-dart-bindings.md  ADR-010-unified-llm-provider-trait-with-opt-in-frontier-egress.md  ADR-011-multi-registry-release-ci-crates-io-npm-pub-dev.md  ADR-012-layered-decode-time-safety-control-loop-with-checkpointed-rollback.md  ADR-013-model-backed-steering-layers-for-the-hybrid-safety-control-loop.md  ADR-014-trained-model-backed-chunk-guard.md  ADR-015-semantic-boundary-checkpoints.md  ADR-016-async-hydra-style-chunk-guard.md  ADR-017-soft-steering-window-gate.md  ADR-018-persistent-model-instances-and-stateful-sessions.md  ADR-019-in-loop-incremental-decoding-and-token-streaming.md  ADR-020-batched-single-pass-prefill.md  ADR-021-memory-mapped-verified-gguf-loading.md  ADR-022-two-tier-quantized-kv-cache-with-attention-aware-eviction.md  ADR-023-baseline-performance-instrumentation.md  README.md
docs/benchmarks/: 2026-06-14-qwen-chat-bottleneck.md  2026-06-15-clinical-quality-safety.md  2026-06-22-adr-018-resident-model-full-suite.md  2026-06-23-adr-018-ac3-prefix-reuse-full-suite.md
docs/ddd/: README.md  context-map.md  domain-events.md  ubiquitous-language.md
docs/ddd/bounded-contexts/: 01-inference-runtime.md  02-prompt-compression.md  03-speculative-decoding.md  04-grammar-constraint.md  05-safety.md  06-memory-management.md  07-hardware-delegate.md  08-model-provenance.md  09-telemetry-privacy.md
docs/research/: Building Edge LLM SDK.md  SecDecoding alternatives research.md  improvements-plan.md
packaging/flutter/: README.md
packaging/npm/: README.md
scripts/: assert-release-readmes.sh  install-cargo-tool.sh  publish-crates.sh  retry-command.sh  test-assert-release-readmes.sh  test-publish-crates.sh
tests/: check_ci_workflows.py  test-install-cargo-tool.sh  test-retry-command.sh
