# Edge-Native LLM SDK — Rust workspace.
# Realizes the ADRs in docs/adr (see docs/adr/README.md). Per ADR-008 the entire
# SDK is Rust with no C/C++ in our code or default dependency set.
#
# The MEMBER crates below build and test on the host. Cross-target builds
# (aarch64-android/ios, wasm32) run separately via `make build-android` etc.
[workspace]
resolver = "2"
members = [
    "crates/el-core",
    "crates/el-memory",
    "crates/el-telemetry",
    "crates/el-provenance",
    "crates/el-safety",
    "crates/el-runtime",
    # Increment 4: pure-Rust DFA token masker (Grammar Constraint context).
    "crates/el-grammar",
    # Increment 2: crates.io verified reachable — ed25519 adapter (ADR-006).
    "crates/adapters/el-provenance-ed25519",
    # Increment 3: real Candle CPU forward verified on host (ADR-002).
    "crates/adapters/el-engine-candle",
    # Increment 7: opt-in frontier LLM cloud backend (ADR-010).
    "crates/adapters/el-cloud",
    # Increment 9: FFI binding surfaces — pure-Rust deps compile on host;
    # cross-target builds run via `make build-android / build-ios / build-wasm`.
    "crates/adapters/el-ffi",
]
exclude = [
    # Excluded: needs crates.io (llguidance/toktrie) + native tokenizer build deps.
    "crates/adapters/el-grammar-llguidance",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.96"
repository = "Edge-Native LLM SDK"

[workspace.dependencies]
# Internal crates referenced by path.
el-core = { path = "crates/el-core" }
el-memory = { path = "crates/el-memory" }
el-telemetry = { path = "crates/el-telemetry" }
el-provenance = { path = "crates/el-provenance" }
el-safety = { path = "crates/el-safety" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
