# Edge-Native LLM SDK — Rust workspace.
# Realizes the ADRs in docs/adr (see docs/adr/README.md). Per ADR-008 the entire
# SDK is Rust with no C/C++ in our code or default dependency set.
#
# The MEMBER crates below build and test on the host. Cross-target builds
# (aarch64-android/ios, wasm32) run separately via `make build-android` etc.
[workspace]
resolver = "2"
members = [
    "crates/el-core",
    "crates/el-memory",
    "crates/el-telemetry",
    "crates/el-provenance",
    "crates/el-safety",
    "crates/el-runtime",
    # Increment 4: pure-Rust DFA token masker (Grammar Constraint context).
    "crates/el-grammar",
    # Increment 2: crates.io verified reachable — ed25519 adapter (ADR-006).
    "crates/adapters/el-provenance-ed25519",
    # Increment 3: real Candle CPU forward verified on host (ADR-002).
    "crates/adapters/el-engine-candle",
    # Increment 7: opt-in frontier LLM cloud backend (ADR-010).
    "crates/adapters/el-cloud",
    # Increment 9: FFI binding surfaces — pure-Rust deps compile on host;
    # cross-target builds run via `make build-android / build-ios / build-wasm`.
    "crates/adapters/el-ffi",
    # Interactive local-LLM chat test client (app, not core) — real Qwen2
    # forward over candle-transformers, drives the ADR-010 LlmProvider seam.
    "apps/el-chat",
]
exclude = [
    # Excluded: needs crates.io (llguidance/toktrie) + native tokenizer build deps.
    "crates/adapters/el-grammar-llguidance",
]

[workspace.package]
edition = "2021"
version = "0.3.3"
license = "Apache-2.0"
rust-version = "1.96"
repository = "Edge-Native LLM SDK"

[workspace.dependencies]
# ALL internal crates are declared here with path + version.
# This is the single source of truth for internal dep version requirements;
# member crates reference them with `{ workspace = true }` and add no inline
# version fields. `cargo set-version --workspace <ver>` updates every entry.
el-core               = { path = "crates/el-core", version = "0.3.3" }
el-memory             = { path = "crates/el-memory", version = "0.3.3" }
el-telemetry          = { path = "crates/el-telemetry", version = "0.3.3" }
el-provenance         = { path = "crates/el-provenance", version = "0.3.3" }
el-safety             = { path = "crates/el-safety", version = "0.3.3" }
el-runtime            = { path = "crates/el-runtime", version = "0.3.3" }
el-grammar            = { path = "crates/el-grammar", version = "0.3.3" }
el-provenance-ed25519 = { path = "crates/adapters/el-provenance-ed25519", version = "0.3.3" }
el-engine-candle      = { path = "crates/adapters/el-engine-candle", version = "0.3.3" }
el-cloud              = { path = "crates/adapters/el-cloud", version = "0.3.3" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Optimize *dependencies* (candle math kernels, tokenizers) at opt-level 3 even
# in dev builds, so the el-chat test client runs CPU inference at a usable speed
# without paying the slow LTO release build. The app crates themselves stay at
# the dev default for fast iterative recompiles.
[profile.dev.package."*"]
opt-level = 3
