# Candle engine adapter (ADR-002). Slimmed to candle-core only (no
# candle-transformers) so the dep tree stays smaller. Promoted into the
# workspace once a real Candle forward is verified on this host.
[package]
name = "el-engine-candle"
description = "RuntimeAcl: InferenceEngine over Candle — real CPU forward (ADR-002)."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
el-core = { path = "../../el-core" }
el-runtime = { path = "../../el-runtime" }
candle-core = "0.8"

[dev-dependencies]
el-provenance = { path = "../../el-provenance" }

[features]
default = []
metal = ["candle-core/metal"]

[lints.rust]
unsafe_code = "forbid"
