# Candle engine adapter (ADR-002). Slimmed to candle-core only (no
# candle-transformers) so the dep tree stays smaller. Promoted into the
# workspace once a real Candle forward is verified on this host.
[package]
name = "el-engine-candle"
description = "RuntimeAcl: InferenceEngine over Candle — real CPU forward (ADR-002)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
el-core = { workspace = true }
el-provenance = { workspace = true }
el-runtime = { workspace = true }
candle-core = "0.8"
# Real transformer forward for local chat (Qwen2 family) + its tokenizer.
# `tokenizers` uses the pure-Rust `fancy-regex` backend (no C/C++ onig/esaxx),
# per ADR-008.
candle-transformers = "0.8"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }

[features]
default = []
metal = ["candle-core/metal"]

[lints.rust]
unsafe_code = "forbid"
