# ADR-001 / ADR-009 / ADR-010 host bindings.
[package]
name = "el-ffi"
description = "Host bindings: uniffi-bindgen-react-native (RN), flutter_rust_bridge v2 (Flutter), wasm-bindgen (web) — ADR-001/009."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
el-core = { workspace = true }
el-runtime = { workspace = true }

# Native path: uniffi-bindgen-react-native uses UniFFI proc-macros.
# flutter_rust_bridge v2 works with plain Rust — codegen runs externally.
# el-engine-candle and el-cloud wire the real LlmProvider backends (ADR-010).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uniffi = { version = "0.28", features = ["tokio"] }
flutter_rust_bridge = "=2.12.0"
el-engine-candle = { workspace = true }
el-cloud = { workspace = true }
el-provenance = { workspace = true }

# WASM path: wasm-bindgen for the npm/web surface.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[lints.rust]
# flutter_rust_bridge uses `frb_expand` as an internal cfg gate; allow it so
# the `#[cfg_attr(..., frb(opaque))]` attribute doesn't emit a warning.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }
