# Workspace member (Increment 2): real ED25519 verifier. Small, pure-Rust dep
# tree fetched from crates.io; plugs into the el-provenance gate (ADR-006).
[package]
name = "el-provenance-ed25519"
description = "Real ED25519 SignatureVerifier over ed25519-dalek (ADR-006)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
el-provenance = { workspace = true }
ed25519-dalek = "2"

[dev-dependencies]
el-core = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
